--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 #/System/*
 ### Track nothing but links and readMe in the Data folder
 /Data/*
-!/Data/*.lnk
+!/Data/*/*.lnk
 !/Data/*.md
 !/Data/*.markdown
 
