--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 #/System/*
 ### Track nothing but links and readMe in the Data folder
 # ** means recursively
-/Data/*
-!/Data/**.lnk
-!/Data/*.md
-!/Data/*.markdown
+/Data/!.lnk
+#!/Data/**.lnk
+#!/Data/*.md
+#!/Data/*.markdown
 
 
 
