--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 #/System/*
 ### Track nothing but links and readMe in the Data folder
 # ** means recursively
-/Data/*
-!/Data/*.lnk
+/Data/**
+!/Data/**/*.lnk
 !/Data/*.md
 !/Data/*.markdown
 
 # ... even if they are in sub-directories
-!/Data/*/
+
 
 
 # Excluded files with following extensions
