--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,11 @@
 #/System/*
 ### Track nothing but links and readMe in the Data folder
 # ** means recursively
-/Data/**
-!/Data/**.lnk
-!/Data/*.md
-!/Data/*.markdown
+/Data/**/*.txt
+#!/Data/**.lnk
+
+#!/Data/*.md
+#!/Data/*.markdown
 
 # ... even if they are in sub-directories
 
