--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 #/System/*
 ### Track nothing but links and readMe in the Data folder
 # ** means recursively
-/Data/**
-!/Data/**/*.lnk
+/Data/**!.lnk
+#!/Data/**/*.lnk
 !/Data/*.md
 !/Data/*.markdown
 
