--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 ### Ignore everything but the selected folders
 *
 !/Data/
-!/References/*
-!/Code/*
-!/Results/*
-!/System/*
+!/References/
+!/Code/
+!/Results/
+!/System/
 !/Working/
 !.gitignore
 !.LICENSE
 !README.md
-!/.git/*
+!/.git/
 
 ### Track nothing in the system folder and the working folder
 /System/*
