modified working readme

--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,8 @@
 
 !/References/**.md
 !/References/**.markdown
-!/References/links/**.lnk
-!/References/Highly-related References/*
+!/References/links
+!/References/Highly-related-References/*
 
 
 !/System/README.md
