add git modules and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
 ### Ignore everything but the selected folders and files
 /*
+!.github
 !.gitignore
 !.LICENSE
 !README.md
 !/Code
-!/Data
-!/References
-!/Results
-!/System
-!/Working
+#!/Data
+#!/References
+#!/Results
+#!/System
+#!/Working
 
 
 
