--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Example-Module"]
-	path = Code/Example-Module
-	url = https://github.com/Wenlab/Example-Module
+[submodule "Computation-Neuro-Textbook"]
+	path = Results/Computation-Neuro-Textbook
+	url = https://github.com/Wenlab/Computation-Neuro-Textbook
