--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,12 @@
 !/Code
 #!/Data
 !/References
-!/Results
-!/Lectures
+!/Slides
+!/Lecture Notes
 !/System
 !/Homework
 !/Score
+!/Advertisement
 #!/Working
 
 
