--- a/.gitignore
+++ b/.gitignore
@@ -7,13 +7,11 @@
 !README.md
 !/Code
 #!/Data
-!/References
-!/Slides
-!/Lecture Notes
-!/System
-!/Homework
-!/Score
 !/Advertisement
+!/Homework
+!/Lecture Notes
+!/Papers
+!/Slides
 #!/Working
 
 
