change folder name

--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,10 @@
 !/Code
 !/Advertisement
 !/Homework
-!/Lecture Notes
+!/Lecture_Notes
 !/Papers
 !/Slides
 !/Books
-!/Just For Fun
-!/Notes of TA
-!/Class of TA
+!/Just_For_Fun
+!/Notes_of_TA
+!/Class_of_TA
